deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cgw
  name: container-api
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: cgw
